Sat Apr 30 03:25:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/io/wait/test_io_wait.rb: New. for testing ext/io/wait.
	  the patch was written by Eric Wong. [Feature #4531]

Sat Apr 30 00:34:56 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/win32.h: remove redundant declaration of
	  rb_w32_time_subtract().

Sat Apr 30 00:16:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (gvl_init): fix hangup if GVL_SIMPLE_LOCK=1.
	  We don't have to call mutex_unlock() before initialize it!

Fri Apr 29 13:15:15 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_win32.c (native_cond_timedwait): New. r31373 caused
	  win32 build failure.

	* thread_win32.c (__cond_timedwait, abs_timespec_to_timeout_ms):
	  New helper functions.

	* win32/win32.c (rb_w32_time_subtract): rename from subtract and
	  remove static.


Fri Apr 29 10:43:09 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/bm_vm4_pipe.rb: Add two new benchmark for GVL
	  performance. They was written by Koichi Sasada.
	* benchmark/bm_vm4_thread_pass.rb: ditto.

Fri Apr 29 10:25:31 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_method.c (rb_clear_cache_by_class): Revert r29673. It made
	  a segmentation fault regression. [Bug #4289][ruby-core:34554].

Fri Apr 29 10:24:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (make_writeconv): do not add textmode newline decorator if any
	  newline decorator is set already.  fixes #4618, fixes #4619

Fri Apr 29 10:17:42 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (lock_func): small cleanup.

Fri Apr 29 10:07:13 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_lock, lock_func): Avoid busy loop and
	  performance degression. bm_vm3_thread_mutex.rb performance
	  change from 109.064sec to 16.331sec. [Feature #4607]

	* thread.c (init_lock_timeout): New helper function.

Thu Apr 28 16:15:49 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
